content/_generated-doc/3.6/config/quarkus-picocli.adoc

:summaryTableId: quarkus-picocli
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-picocli_configuration]]link:#quarkus-picocli_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-picocli_quarkus.picocli.native-image.processing.enable]]`link:#quarkus-picocli_quarkus.picocli.native-image.processing.enable[quarkus.picocli.native-image.processing.enable]`


[.description]
--
Set this to false to use the `picocli-codegen` annotation processor instead of build steps.

CAUTION: this will have serious build-time performance impact since this is run on every restart in dev mode, use with care!

This property is intended to be used only in cases where an incompatible change in the picocli library causes problems in the build steps used to support GraalVM Native images.

In such cases this property allows users to make the trade-off between fast build cycles with the older version of picocli, and temporarily accept slower build cycles with the latest version of picocli until the updated extension is available.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PICOCLI_NATIVE_IMAGE_PROCESSING_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PICOCLI_NATIVE_IMAGE_PROCESSING_ENABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-picocli_quarkus.picocli.top-command]]`link:#quarkus-picocli_quarkus.picocli.top-command[quarkus.picocli.top-command]`


[.description]
--
Name of bean annotated with `io.quarkus.picocli.runtime.annotations.TopCommand` or FQCN of class which will be used as entry point for Picocli CommandLine instance. This class needs to be annotated with `picocli.CommandLine.Command`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PICOCLI_TOP_COMMAND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PICOCLI_TOP_COMMAND+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===